<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/step_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/stepplayerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_margin="10dp" />

    <ImageView
        android:id="@+id/thumbImage"
        android:layout_gravity="left"
        android:paddingRight="15dp"
        android:elevation="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:id="@+id/recipe_step_detail_text"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp">

        <Button
            android:id="@+id/previousStep"
            android:padding="40dp"
            android:elevation="6dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTintMode="src_over"
            android:background="@drawable/ic_navigate_before_black_18dp" />

        <Button
            android:id="@+id/nextStep"
            android:padding="40dp"
            android:layout_margin="10dp"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:backgroundTintMode="src_over"
            android:background="@drawable/ic_navigate_next_black_18dp" />
    </LinearLayout>

</LinearLayout>
