<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.susiyanti.bakingapp.MainActivity">

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recipe_fragment_body_part"
        android:name="com.example.susiyanti.bakingapp.RecipeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.constraint.ConstraintLayout>
